src/routes/global.css
:root {
	--header-height: 64px;
	--contents-width: 712px;
	--contents-width-text: 512px;

	--theme-color: #1a5086;
	--theme-color-rgb: 26, 80, 134;
	--theme-light-color: #74aae7;
	--accent-color: #e45355;

	--bg-light-color: light-dark(#f0f7ff, #001a2f);
	--bg-color: light-dark(#ffffff, #000010);
	--text-color: light-dark(#000000, #ffffff);
	--footer-bg-color: light-dark(#1a5086, #001a2f);
	--header-bg-color: light-dark(#ffffff, #000010);

	@media (prefers-color-scheme: light) {
		--bg-light-color: #f0f7ff;
		--bg-color: #ffffff;
		--text-color: #000000;
		--footer-bg-color: #1a5086;
		--header-bg-color: #ffffff;
	}
	@media (prefers-color-scheme: dark) {
		--bg-light-color: #001a2f;
		--bg-color: #000010;
		--text-color: #ffffff;
		--footer-bg-color: #001a2f;
		--header-bg-color: #000010;
	}

	/* Manual theme override */
	&[data-theme='light'] {
		--bg-light-color: #f0f7ff;
		--bg-color: #ffffff;
		--text-color: #000000;
		--footer-bg-color: #1a5086;
		--header-bg-color: #ffffff;
	}
	&[data-theme='dark'] {
		--bg-light-color: #001a2f;
		--bg-color: #000010;
		--text-color: #ffffff;
		--footer-bg-color: #001a2f;
		--header-bg-color: #000010;
	}
}

body {
	background-color: var(--bg-color);
	color: var(--text-color);
	margin: 0;
	padding: 0;
}

#svelte {
	width: 100%;
	height: 100%;
	min-height: 100vh;
	box-sizing: border-box;
	position: relative;
	top: 0;
}

a {
	text-decoration: none;
}

